<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToggleOne"
        android:id="@+id/toggleButton2"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ScreenFilter"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:singleLine="true"
        android:layout_alignTop="@+id/toggleButton2"
        android:layout_alignBottom="@+id/toggleButton2"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:gravity="start|center"
        android:paddingStart="10dp"
        android:paddingEnd="50dp" />

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gradient"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="start|center"
        android:paddingStart="10dp"
        android:paddingEnd="50dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/toggleButton" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToggleTwo"
        android:id="@+id/toggleButton"
        android:layout_toEndOf="@+id/textView"
        android:layout_below="@+id/toggleButton2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ColorSelectButton"
        android:id="@+id/button"
        android:minLines="1"
        android:layout_alignBottom="@+id/textureView"
        android:layout_alignStart="@+id/toggleButton" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/textureView"
        android:background="#ff000000"
        android:layout_below="@+id/textView2"
        android:layout_toStartOf="@+id/button"
        android:layout_marginEnd="10dp" />

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Color"
        android:id="@+id/textView32"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textAlignment="center"
        android:gravity="start|center"
        android:paddingStart="10dp"
        android:paddingEnd="50dp"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/button"
        android:layout_toStartOf="@+id/textureView"
        android:layout_alignEnd="@+id/textureView" />

    <TextView
        android:textSize="38.0pt"
        android:gravity="center"
        android:id="@id/textViewPer"
        android:padding="3.0dip"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/TransparencyPercent"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Transparency"
        android:id="@+id/textView5"
        android:layout_below="@id/textViewPer"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        android:id="@+id/textView6"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar4"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Area"
        android:id="@+id/textView7"
        android:layout_below="@+id/seekBar4"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar5"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
