<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity$PlaceholderFragment">

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/textView"
            android:onClick="StartToggle"
            android:text="@string/ToggleOne" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/toggleButton2"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/toggleButton2"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:paddingEnd="50dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/ScreenFilter"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/toggleButton"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:paddingEnd="50dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/Gradient"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toggleButton2"
            android:layout_toEndOf="@+id/textView"
            android:onClick="GradientToggle"
            android:text="@string/ToggleTwo" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:onClick="ColorPicker"
            android:text="@string/ColorSelectButton"
            android:layout_below="@+id/toggleButton"
            android:layout_alignStart="@+id/toggleButton" />

        ImageView
            android:id="@+id/textureView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView2"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/button"
            android:background="#19BB7C"
        android:contentDescription="@string/ColorImageIs" /

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center"
            android:paddingEnd="50dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/Color"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_above="@id/textViewPer" />

        <TextView
            android:id="@id/textViewPer"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:padding="3.0dip"
            android:text="@string/TransparencyPercent"
            android:textSize="38.0pt"
            android:layout_below="@+id/button"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewPer"
            android:layout_centerHorizontal="true"
            android:text="@string/Transparency" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar"
            android:layout_centerHorizontal="true"
            android:text="@string/Height" />

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar4"
            android:layout_centerHorizontal="true"
            android:text="@string/Area" />

        <SeekBar
            android:id="@+id/seekBar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New ToggleButton"
            android:id="@+id/toggleButton3"
            android:layout_below="@+id/seekBar5"
            android:layout_alignStart="@+id/textView5"
            android:nestedScrollingEnabled="false"
            android:onClick="M" />

    </RelativeLayout>

</FrameLayout>
